2003-05-13  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/coherent-ligature-engraver.cc: fixed typo

	* lily/coherent-ligature-engraver.cc,
	lily/gregorian-ligature-engraver.cc,
	lily/ligature-bracket-engraver.cc, lily/ligature-engraver.cc,
	lily/mensural-ligature-engraver.cc, lily/note-heads-engraver.cc,
	lily/vaticana-ligature-engraver.cc,
	lily/include/ligature-engraver.hh, ly/gregorian-init.ly,
	scm/grob-description.scm: cleanup: junked LigatureHead grob and
	removed all ligature specific stuff from NoteHead code

	* lily/ligature-head.cc, lily/include/ligature-head.hh: removed;
	ligatures now use regular noteheads

	* lily/vaticana-ligature.cc: tiny code cleanups

	* lily/vaticana-ligature-engraver.cc: bugfix: insert additional
	space between two adjacent noteheads of the same pitch

	* scm/grob-description.scm: bugfix: VaticanaLigature: interface
	description; cleanup: removed obsolete font-family settings

2003-05-11  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/coherent-ligature-engraver.cc,
	lily/gregorian-ligature-engraver.cc,
	lily/ligature-bracket-engraver.cc, lily/ligature-engraver.cc,
	lily/mensural-ligature-engraver.cc,
	lily/vaticana-ligature-engraver.cc,
	lily/include/gregorian-ligature-engraver.hh: updated for new
	Coherent_ligature_engraver; added comments that describe the basic
	design ideas of the ligature implementation

	* lily/coherent-ligature-engraver.cc,
	lily/include/coherent-ligature-engraver.hh: new file: shared code
	between mensural ligatures and Gregorian chant notation ligatures

2003-05-11  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: XEmacs fixes: include two definitions for the
	key for autocompletion XEmacs [iso-left-tab], Emacs [iso-lefttab],
	use only two arguments in sit-for, use no arguments in
	read-char-exclusive, backspace is not a character (127) in XEmacs.

	* lilypond-font-lock.el: XEmacs: small fix to scheme-fontifying.

2003-05-06  Heikki Junes  <hjunes@cc.hut.fi>
